docs/css/styles.css
td {
    min-width: 20rem;
}

body {
    font-family: 'system-ui';
}

footer {
    background-color: white;
}

@media (prefers-color-scheme: dark) {
    body, footer {
        background-color: #333;
        color: #fff;

        .table-striped>tbody>tr:nth-of-type(odd) {
            background-color: #444;
        }

        .table-hover>tbody>tr:hover {
            background-color: #555
        }
}

.underline {
    text-decoration: underline;
}

